repositioned arrows on mobile size, required due to previous bug fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,10 +13,10 @@ body {
 
 	&__arrow-left {
 		position: absolute;
-		width: 4.6rem;
-		height: 4.6rem;
+		width: 4.2rem;
+		height: 4.2rem;
 
-		top: 34.6rem;
+		top: 33.6rem;
 		left: 0.9rem;
 		padding: 0;
 		border: 0;
@@ -46,10 +46,10 @@ body {
 	}
 	&__arrow-right {
 		position: absolute;
-		width: 4.6rem;
-		height: 4.6rem;
+		width: 4.2rem;
+		height: 4.2rem;
 		padding: 0;
-		top: 34.6rem;
+		top: 33.6rem;
 		right: 0.9rem;
 		background: transparent;
 		border: 0;
@@ -174,7 +174,7 @@ body {
 	.submit {
 		display: block;
 		margin: 3.5rem auto 0;
-		padding: 0.8rem 2rem;
+		padding: 1rem 2rem;
 		border-radius: 5rem;
 		border: #272727;
 		font-family: "NHaasGroteskDSW01-55Rg";
